@@ -13,7 +13,8 @@ my %makeconf = (
     'PREREQ_PM'    => {
         'Apache::Test' => 1.35,
         'Test::More'   => 0,
-        'CGI'          => 0
+        'CGI'          => 0,
+        'Class::Load'  => 0.03
     },
     'clean'        => {
         FILES => "@CLEAN_FILES"
