@@ -18,3 +18,4 @@ hash_tags = #perl
 [Prereqs]
 Apache::Test = 1.35
 CGI = 3.12
+Class::Load = 0.03
